--- a/scene.html
+++ b/scene.html
@@ -298,6 +298,11 @@
 			
 			function update()
 			{
+				while(scene.children.length > 0)
+				{ 
+    				scene.remove(scene.children[0]); 
+				}
+				
 				drawBezierSurface(controlPoints, 50, 0xff0000, false);
             	var controlMeshColor = 0x000000;
             	drawControlMesh(controlPoints, controlPointsSpheres, controlMeshColor, controlMeshColor);
