--- a/scene.html
+++ b/scene.html
@@ -142,7 +142,7 @@
 			function getLinePlaneIntersectionPoint(planeNormal, planePoint, lineStart, lineEnd)
 			{
 				if(!checkLinePlaneIntersection(planeNormal, lineStart, lineEnd))
-					return;
+					return new THREE.Vector3();
 
 				var v1p0 =  new THREE.Vector3();
 				v1p0.subVectors(planePoint, lineStart);
@@ -155,6 +155,7 @@
 				intersectionPoint.addScaledVector(v1v2, d);
 				intersectionPoint.add(lineStart);
 
+				return intersectionPoint;
 			}
 			
             function drawCubicBezier(controlPoints, color)
@@ -336,6 +337,24 @@
 	                var distaceSurface = new THREE.Mesh(distaceSurfaceGeometry, distaceSurfaceMaterial);
 	                distaceSurface.material.side = THREE.DoubleSide;
 	                scene.add(distaceSurface);
+
+	                var planeNormal = new THREE.Vector3(0, 1, 0);
+	                var planePoint = new THREE.Vector3(0, y, 0);
+
+	                var intersectionsInfo = [];
+
+	                edgesInfo.forEach(function(edge, index, array)
+	                {
+	                	var edgeStart = distaceSurfaceGeometry.vertices[edge.vBeginIndex].clone();
+	                	var edgeEnd = distaceSurfaceGeometry.vertices[edge.vEndIndex].clone();
+
+	                	if(checkLinePlaneIntersection(planeNormal, edgeStart, edgeEnd))
+	                	{
+	                		var intersectionPoint = getLinePlaneIntersectionPoint(planeNormal, planePoint, edgeStart, edgeEnd);
+	                		intersectionsInfo.push(new IntersectionInfo(intersectionPoint.x, intersectionPoint.y, index));
+	                	}
+
+	                });
 	            }
 
 				if(controls.drawDebugElements)
